Finish footer. Fix plan height so buttons align across all pages.

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,54 +1,79 @@
 footer {
-    min-width: 375px;
-    height: 72px;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  min-width: 375px;
+  height: 72px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .btn {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 14px;
-    border: none;
-    margin: 16px;
-    display: block;
-    text-decoration: none;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 14px;
+  border: none;
+  margin: 16px;
+  display: block;
+  text-decoration: none;
 }
 
 .back {
-    color: #9699AA;
-    background-color: transparent;
+  color: #9699aa;
+  background-color: transparent;
 }
 
 .back:hover {
-    color: #022959;
+  color: #022959;
 }
 
 .next {
-    width: 97px;
-    height: 40px;
-    color: white;
-    background-color: #022959;
-    border-radius: 5px;
-    display: grid;
-    place-items: center;
+  width: 97px;
+  height: 40px;
+  color: white;
+  background-color: #022959;
+  border-radius: 5px;
+  display: grid;
+  place-items: center;
 }
 
 .next:hover {
-    background-color: #164A8A;
-    cursor: pointer
+  background-color: #164a8a;
+  cursor: pointer;
 }
 
 .confirm {
-    background-color: #483EFF;
-    color: white;
+  background-color: #483eff;
+  color: white;
 }
 
 .confirm:hover {
-    background-color: #928CFF;
+  background-color: #928cff;
 }
 
 .hideBtn {
-   visibility: hidden;
+  visibility: hidden;
+}
+
+@media (min-width: 940px) {
+  footer {
+    min-width: 450px;
+    width: 450px;
+    height: 48px;
+    margin-left: 100px;
+  }
+
+  .btn {
+    font-size: 16px;
+    display: block;
+    text-decoration: none;
+    margin: 0;
+  }
+
+  .next {
+    width: 123px;
+    height: 48px;
+    color: white;
+    border-radius: 8px;
+    display: grid;
+    place-items: center;
+  }
 }
