--- a/src/css/plan.css
+++ b/src/css/plan.css
@@ -64,7 +64,7 @@
 @media (min-width: 940px) {
   .planContainer {
     width: 450px;
-    height: 348px;
+    height: 372px;
     margin-left: 100px;
     margin-top: 56px;
     padding: 0;
